@@ -12,5 +12,5 @@
      conditionalparents: CONDITIONALPARENTS_NIL_CONTINUOUS | 
                          seg(0) using mixture collection("collection_seg_$track") mapping("map_parent");
 
-     weight: scale 0 | scale 1;
+     weight: scale 0 | scale $weight_scale;
    }
